--- a/.classpath
+++ b/.classpath
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/Or Shemesh/eclipse-workspace/Drone-Simulator-Robot/antlr4-runtime-4.7.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Or Shemesh/eclipse-workspace/Drone-Simulator-Robot/commons-lang3-3.8.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Or Shemesh/eclipse-workspace/Drone-Simulator-Robot/commons-text-1.6.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Or Shemesh/eclipse-workspace/Drone-Simulator-Robot/jgrapht-core-1.4.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Or Shemesh/eclipse-workspace/Drone-Simulator-Robot/jgrapht-demo-1.4.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Or Shemesh/eclipse-workspace/Drone-Simulator-Robot/jgrapht-ext-1.4.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Or Shemesh/eclipse-workspace/Drone-Simulator-Robot/jgrapht-io-1.4.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Or Shemesh/eclipse-workspace/Drone-Simulator-Robot/jgraphx-3.9.8.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Or Shemesh/eclipse-workspace/Drone-Simulator-Robot/jheaps-0.11.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Or Shemesh/eclipse-workspace/Drone-Simulator-Robot/lib/antlr4-runtime-4.7.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Or Shemesh/eclipse-workspace/Drone-Simulator-Robot/lib/commons-lang3-3.8.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Or Shemesh/eclipse-workspace/Drone-Simulator-Robot/lib/commons-text-1.6.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Or Shemesh/eclipse-workspace/Drone-Simulator-Robot/lib/jgrapht-core-1.4.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Or Shemesh/eclipse-workspace/Drone-Simulator-Robot/lib/jgrapht-demo-1.4.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Or Shemesh/eclipse-workspace/Drone-Simulator-Robot/lib/jgrapht-ext-1.4.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Or Shemesh/eclipse-workspace/Drone-Simulator-Robot/lib/jgrapht-io-1.4.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Or Shemesh/eclipse-workspace/Drone-Simulator-Robot/lib/jgraphx-3.9.8.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Or Shemesh/eclipse-workspace/Drone-Simulator-Robot/lib/jheaps-0.11.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
